<resources>
    <string name="app_name">Kecipir Duplicate App</string>
    <string name="hint_search_product">Cari Sayur Organik</string>
    <string name="label_delivery_date">Tanggal Pengiriman</string>
    <string name="sample_date">Senin, 11 Mei 2020</string>
    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_under_constructor">Under Constructor</string>
    <string name="sample_veggie_name">Jagung</string>
    <string name="action_see_all">Lihat Semua</string>
    <string name="label_farmer">Petani</string>
    <string name="format_product_sold">%d Produk Terjual</string>
    <string name="sample_total_rating">5.0</string>
    <string name="label_review_product">Review Produk</string>
    <string name="title_todays_discount">Produk Diskon Hari Ini</string>
    <string name="title_product_category">Kategori Produk</string>
    <string name="title_popular_product">Produk Terlaris</string>
    <string name="title_all_product">Semua Produk</string>
</resources>
