<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.product.detail.ProductDetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            app:collapsedTitleTextAppearance="@style/HeaderTextView.White"
            app:contentScrim="@color/colorPrimary"
            app:expandedTitleTextAppearance="@style/HeaderTextView.Transparent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fitsSystemWindows="true"
                app:layout_collapseMode="parallax">

                <ImageView
                    android:id="@+id/imgProduct"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_300dp"
                    app:layout_constraintDimensionRatio="1:1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:src="@tools:sample/avatars" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvName"
                    style="@style/SubHeaderTextView"
                    android:layout_width="0dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="@dimen/dimen_8dp"
                    android:ellipsize="end"
                    android:maxLines="2"
                    app:layout_constraintEnd_toEndOf="@id/imgProduct"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/imgProduct"
                    tools:text="@string/sample_veggie_name" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvDiscount"
                    android:layout_width="0dp"
                    style="@style/CaptionTextView.White"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="8dp"
                    android:background="@color/colorRedTransparent"
                    android:visibility="gone"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvName"
                    tools:text="10%" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvPrice"
                    style="@style/BodyTextView.Accent"
                    android:layout_marginLeft="@dimen/dimen_16dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvDiscount"
                    app:layout_constraintBottom_toTopOf="@id/guideline"
                    android:layout_marginBottom="@dimen/dimen_8dp"
                    tools:text="Rp. 50.000" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvPromoPrice"
                    style="@style/SubHeaderTextView.Accent"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="@+id/tvPrice"
                    app:layout_constraintStart_toEndOf="@+id/tvPrice"
                    app:layout_constraintTop_toTopOf="@+id/tvPrice"
                    tools:text="Rp. 50.000" />

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/gradeContainer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    app:cardCornerRadius="@dimen/dimen_8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imgProduct">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvGrade"
                        style="@style/BodyTextView.White"
                        android:background="@drawable/bg_rectangel_rounded_primary"
                        android:padding="@dimen/dimen_8dp"
                        android:text="@string/sample_veggie_name" />

                </com.google.android.material.card.MaterialCardView>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvLabelFarmer"
                    style="@style/BodyTextView.Grey"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="@dimen/dimen_16dp"
                    android:text="@string/label_farmer"
                    app:layout_constraintTop_toBottomOf="@id/divider"
                    app:layout_constraintStart_toStartOf="parent"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvFarmer"
                    style="@style/SubHeaderTextView.Accent"
                    android:text="Petani"
                    app:layout_constraintStart_toStartOf="@+id/tvLabelFarmer"
                    app:layout_constraintTop_toBottomOf="@id/tvLabelFarmer"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvLocation"
                    style="@style/CaptionTextView"
                    android:layout_marginTop="@dimen/dimen_2dp"
                    android:text="Petani"
                    app:layout_constraintStart_toStartOf="@+id/tvFarmer"
                    app:layout_constraintTop_toBottomOf="@id/tvFarmer" />

                <View
                    android:id="@+id/divider"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_2dp"
                    android:background="@color/colorGrey"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/guideline" />

                <View
                    android:id="@+id/divider_two"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_2dp"
                    android:layout_marginTop="16dp"
                    android:background="@color/colorGrey"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvLocation" />

                <View
                    android:id="@+id/vertical_divider"
                    android:layout_width="@dimen/dimen_2dp"
                    android:layout_height="0dp"
                    android:layout_marginTop="16dp"
                    android:background="@color/colorGrey"
                    app:layout_constraintBottom_toBottomOf="@+id/tvLocation"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/divider" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvLabelReview"
                    style="@style/BodyTextView.Grey"
                    android:layout_marginTop="@dimen/dimen_16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:text="@string/label_review_product"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/divider" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvRating"
                    style="@style/SubHeaderTextView.Accent"
                    app:layout_constraintEnd_toEndOf="@id/tvLabelReview"
                    app:layout_constraintStart_toStartOf="@+id/tvLabelReview"
                    app:layout_constraintTop_toBottomOf="@+id/tvLabelReview"
                    tools:text="@string/sample_total_rating" />

                <androidx.appcompat.widget.AppCompatRatingBar
                    android:id="@+id/ratingProduct"
                    style="@style/Widget.AppCompat.RatingBar.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="@+id/tvRating"
                    app:layout_constraintStart_toStartOf="@+id/tvRating"
                    app:layout_constraintTop_toBottomOf="@+id/tvRating" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvProductSold"
                    style="@style/CaptionTextView"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/format_product_sold"
                    app:layout_constraintBottom_toTopOf="@+id/divider"
                    app:layout_constraintEnd_toEndOf="@+id/gradeContainer"
                    app:layout_constraintTop_toBottomOf="@+id/gradeContainer" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_begin="388dp" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:gravity="top"
                app:layout_collapseMode="pin"
                app:navigationIcon="@drawable/ic_arrow_back_white_24dp" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/productContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/btnBuy"
            android:fillViewport="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvProductInformation"
                    style="@style/SubHeaderTextView.Primary"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="@dimen/dimen_16dp"
                    android:text="Informasi Produk"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvLabelUnit"
                    style="@style/BodyTextView.Grey"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="8dp"
                    android:text="Satuan Unit"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvProductInformation" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvUnit"
                    style="@style/BodyTextView.Accent"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:text="400 gram"
                    app:layout_constraintBottom_toBottomOf="@id/tvLabelUnit"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/tvLabelUnit" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvLabelStock"
                    style="@style/BodyTextView.Grey"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="@dimen/dimen_8dp"
                    android:text="Stok"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvLabelUnit" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvStock"
                    style="@style/BodyTextView.Accent"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:text="10"
                    app:layout_constraintBottom_toBottomOf="@id/tvLabelStock"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/tvLabelStock" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvLavelOrganicLevel"
                    style="@style/SubHeaderTextView.Primary"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="@dimen/dimen_16dp"
                    android:text="Tingkat Keorganisan"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvLabelStock" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvOrganicLevel"
                    style="@style/BodyTextView.Grey"
                    android:layout_width="0dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvLavelOrganicLevel"
                    tools:text="@tools:sample/lorem" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvLabelDescription"
                    style="@style/SubHeaderTextView.Primary"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="@dimen/dimen_16dp"
                    android:text="Deskripsi Manfaat Produk"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvOrganicLevel" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvDescription"
                    style="@style/BodyTextView.Grey"
                    android:layout_width="0dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvLabelDescription"
                    tools:text="@tools:sample/lorem" />

                <View
                    android:id="@+id/divider_three"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_2dp"
                    android:layout_marginTop="@dimen/dimen_16dp"
                    app:layout_constraintTop_toBottomOf="@id/tvDescription" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvLabelProduct"
                    style="@style/BodyTextView"
                    android:layout_marginLeft="@dimen/dimen_16dp"
                    android:layout_marginTop="@dimen/dimen_16dp"
                    android:text="Sering dibeli bersama"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/divider_three" />

                <include
                    layout="@layout/layout_product"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:clipToPadding="false"
                    android:padding="@dimen/dimen_16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvLabelProduct" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnBuy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_margin="@dimen/dimen_16dp"
            android:text="Beli" />

    </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>